alignment fixes for cards grid

--- a/src/app/components/response-display/response-display.component.scss
+++ b/src/app/components/response-display/response-display.component.scss
@@ -6,8 +6,7 @@
   display: flex;
   position: relative;
   height: 100vh;
-  width: 100%;
-  padding-top: 40px;
+  padding: 10px 40px;
 }
 
 
